--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 body {
         font-family; Helvetica Neue, Arial;
         font-size: 18px;
@@ -32,21 +38,52 @@ h2{
 }
 .author-text {
     font-size: 22px;
+    float: left;
+    margin-top: 30px;
+    margin-left: 10px;
 }
 .contatiner {
     width: 1140px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 20px auto 0 auto;
 }
 
 .blog-post {
-    background-color: #0000ff;
+    
+    width: 75%;
+    float: left;
+    padding-right: 30px;
+    position: relative;
 }
 
 .other-posts {
-    background-color: #00ff00;
+   
+    width: 25%;
+    float: left;
 }
 
 .author-box {
-    background-color: #ffff00;
+    padding-top: 20px;
+    border-top: 1px solid #929193
+}
+
+.other {
+    margin-bottom:  40px;
+}
+
+.author-box img {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    float: left;
+}
+
+.blog-post img{
+    height: 150px;
+    width: auto;
+}
+
+.date {
+    position: absolute;
+    top: 10px;
+    right: 30px;
 }
